Bug 472812 - Can't re-arrange pinned-and-running apps in Icons-Only Task Manager
Summary: Can't re-arrange pinned-and-running apps in Icons-Only Task Manager
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.27.6
Platform: Other Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-30 21:45 UTC by Nate Graham
Modified: 2023-07-31 14:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-07-30 21:45:51 UTC
STEPS TO REPRODUCE
1. Pin a bunch of apps to the Task Manager
2. Launch a few of them
3. Drag any of the pinned-and-running apps to re-arrange them

OBSERVED RESULT
You can't.

EXPECTED RESULT
You can.

ADDITIONAL INFORMATION
You can re-arrange pinned apps that are not running, and running apps that are not pinned, but not apps that have both characteristics.
Comment 1 Aaron Rainbolt 2023-07-31 02:23:32 UTC
Cannot reproduce on Plasma 5.27.6, X11, Qt 5.15.3, Kubuntu 22.04 LTS using the Breeze Dark theme and a floating panel. I can drag pinned apps (both launched and non-launched) freely.
Comment 2 Nate Graham 2023-07-31 02:43:56 UTC
Right, it's a recent Plasma 6 regression.
Comment 3 Bug Janitor Service 2023-07-31 04:36:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3129
Comment 4 Fushan Wen 2023-07-31 14:12:47 UTC
Git commit b9ffae96de16dbbc5ccde6c1324573aba2f06cad by Fushan Wen.
Committed on 31/07/2023 at 16:12.
Pushed by fusionfuture into branch 'master'.

libtaskmanager: fix unable to change order of launchers

Amends a67e3674bae276bf76a11df7e0d11c6195e591b8
Amends 097e896ccb960a33e4bc60721344e3529ccedf4b
FIXED-IN: 5.27.7

M  +2    -2    libtaskmanager/tasksmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b9ffae96de16dbbc5ccde6c1324573aba2f06cad
Comment 5 Fushan Wen 2023-07-31 14:30:55 UTC
Git commit b1711a48ea745ba3eed189fc59726abf5b5fb050 by Fushan Wen.
Committed on 31/07/2023 at 16:15.
Pushed by fusionfuture into branch 'Plasma/5.27'.

libtaskmanager: fix unable to change order of launchers

Amends a67e3674bae276bf76a11df7e0d11c6195e591b8
Amends 097e896ccb960a33e4bc60721344e3529ccedf4b
FIXED-IN: 5.27.7


(cherry picked from commit b9ffae96de16dbbc5ccde6c1324573aba2f06cad)

M  +2    -2    libtaskmanager/tasksmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b1711a48ea745ba3eed189fc59726abf5b5fb050