libtaskmanager: fix unable to change order of launchers

Amends a67e3674bae276bf76a11df7e0d11c6195e591b8
Amends 097e896ccb960a33e4bc60721344e3529ccedf4b

BUG: 472812
FIXED-IN: 5.27.7