libtaskmanager/tasksmodel.cpp
@@ -1641,8 +1641,8 @@ bool TasksModel::move(int row, int newPos, const QModelIndex &parent)
     if (d->separateLaunchers && !parent.isValid() /* Exclude tasks in a group */) {
         int firstTask = 0;
         if (d->launcherTasksModel) {
-            if (d->launchInPlace && d->activityInfo != nullptr) {
-                firstTask = d->launcherTasksModel->rowCountForActivity(d->activityInfo->currentActivity());
+            if (d->launchInPlace) {
+                firstTask = d->launcherTasksModel->rowCountForActivity(activity());
             } else {
                 firstTask = launcherCount();
             }
